tests/ui/identity_conversion.stderr
error: identical conversion
 --> $DIR/identity_conversion.rs:4:13
  |
4 |     let _ = T::from(val);
  |             ^^^^^^^^^^^^ help: consider removing `T::from()`: `val`
  |
note: lint level defined here
 --> $DIR/identity_conversion.rs:1:9
  |
1 | #![deny(identity_conversion)]
  |         ^^^^^^^^^^^^^^^^^^^

error: identical conversion
 --> $DIR/identity_conversion.rs:5:5
  |
5 |     val.into()
  |     ^^^^^^^^^^ help: consider removing `.into()`: `val`

error: identical conversion
  --> $DIR/identity_conversion.rs:17:22
   |
17 |         let _: i32 = 0i32.into();
   |                      ^^^^^^^^^^^ help: consider removing `.into()`: `0i32`

error: identical conversion
  --> $DIR/identity_conversion.rs:37:21
   |
37 |     let _: String = "foo".to_string().into();
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^ help: consider removing `.into()`: `"foo".to_string()`

error: identical conversion
  --> $DIR/identity_conversion.rs:38:21
   |
38 |     let _: String = From::from("foo".to_string());
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: consider removing `From::from()`: `"foo".to_string()`

error: identical conversion
  --> $DIR/identity_conversion.rs:39:13
   |
39 |     let _ = String::from("foo".to_string());
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: consider removing `String::from()`: `"foo".to_string()`

error: aborting due to 6 previous errors

